RESOLVED FIXED274486
WebExtensionContext::openTabs() should only return tabs that are open
https://bugs.webkit.org/show_bug.cgi?id=274486
Summary WebExtensionContext::openTabs() should only return tabs that are open
Kiara Rose
Reported 2024-05-21 14:25:13 PDT
Safari sometimes crashes after deleting or switching between profiles
Attachments
Radar WebKit Bug Importer
Comment 1 2024-05-21 14:25:24 PDT
Kiara Rose
Comment 2 2024-05-21 14:26:08 PDT
Kiara Rose
Comment 3 2024-05-21 14:41:58 PDT
EWS
Comment 4 2024-05-23 08:29:53 PDT
Committed 279202@main (37b7a1c15d16): <https://commits.webkit.org/279202@main> Reviewed commits have been landed. Closing PR #28871 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.