WebExtensionContext::openTabs() should only return tabs that are open https://bugs.webkit.org/show_bug.cgi?id=274486 rdar://128285195

Reviewed by Timothy Hatcher.

Filter WebExtensionContext::openTabs() to only return tabs that are open.
Not having this check is a bug and adding this check should cause bugs like
rdar://128285195 to reproduce less since didOpenTab wouldn't have been called
for those tabs since they belong to a different profile.

* Source/WebKit/UIProcess/Extensions/Cocoa/WebExtensionContextCocoa.mm:
(WebKit::WebExtensionContext::openTabs const):

* Source/WebKit/UIProcess/Extensions/Cocoa/WebExtensionTabCocoa.mm:
(WebKit::WebExtensionTab::mainWebView() const):
Remove the THROW_UNLESS from here since throwing here doesn't give
us any indication of where the issue is occurring from the app.
A better place for this error would be in getOrCreateTab.

Canonical link: https://commits.webkit.org/279202@main